[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "woocommerce-store-analyzer"
version = "0.1.0"
description = "Python SDK for the WooCommerce Store Analyzer Apify actor — revenue, traffic, brand age, 70+ plugins, tech stack, tracking IDs, dropshipper risk for any WooCommerce store."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ApiVault Labs" }]
keywords = [
    "woocommerce", "woocommerce-analyzer", "woocommerce-store-analyzer",
    "wordpress-analyzer", "wp-analyzer", "wp-plugin-detector",
    "ecommerce-intelligence", "store-intelligence",
    "builtwith-alternative", "wappalyzer-alternative", "similarweb-alternative",
    "competitor-intelligence", "lead-generation", "agency-prospecting",
    "dropshipper-detection", "brand-network-mapping",
    "web-scraping", "apify", "apify-actor", "python-sdk",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/apivault-labs/woocommerce-store-analyzer-python"
Documentation = "https://github.com/apivault-labs/woocommerce-store-analyzer-python#readme"
"Apify Actor" = "https://apify.com/apivault_labs/woocommerce-store-analyzer"
"Bug Tracker" = "https://github.com/apivault-labs/woocommerce-store-analyzer-python/issues"

[tool.setuptools.packages.find]
include = ["woocommerce_analyzer*"]
